[project]
name = "hands-on-florence2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "timm>=1.0.17",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]
